--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,24 +3,25 @@
 @import "roboto";
 @import "bakbak_one";
 
+
 .bi {
-    vertical-align: -0.1em;
-  }
+  vertical-align: -0.1em;
+}
   
-  body {
-    min-height: fill-available;
-    min-height: 100vh;
-  }
+body {
+  min-height: stretch;
+  min-height: 100vh;
+}
   
-  aside {
-    height: 100vh;
-    // height: -webkit-fill-available;
-    // height: fill-available;
-    // height: -moz-fill-available;
-    overflow-x: auto;
-    overflow-y: hidden;
-  }
+aside {
+  height: 100vh;
+  // height: -webkit-fill-available;
+  // height: fill-available;
+  // height: -moz-fill-available;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
   
-  .navigation-header {
-    font-size: 0.750em;
-  }
+.navigation-header {
+  font-size: 0.750em;
+}
