feat: Add component lists and component details pages

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,4 +8,16 @@
     .content-wrapper {
         @apply min-h-[93vh] bg-white dark:bg-gray-900 shadow-sm rounded-lg mt-10 border border-gray-200 dark:border-gray-700 min-w-full md:w-4/5 md:min-w-0
     }
+    .button {
+        @apply border border-gray-200 dark:border-gray-700 px-4 py-1 text-sm cursor-pointer
+    }
+    .tab-active {
+        @apply border-b-2 border-yellow-500 text-yellow-500
+    }
+    .border-color {
+        @apply border-gray-200 dark:border-gray-700
+    }
+    .grid-component-details {
+        grid-template-rows: 1fr minmax(100px, 3fr);
+    }
 }
