feat: Load components list and fetch the status after lloading the card. Show a skeleton when loading the date.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -28,6 +28,10 @@
       @apply bg-gray-900
       /* @apply bg-fgblue2 */
   }
+
+  .skeleton {
+      @apply animate-pulse bg-gray-200 dark:bg-gray-700
+  }
 }
 
 @layer base {
