--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,5 +1,5 @@
 .bs-icon {
-  --bs-icon-size: .75rem;
+  --bs-icon-size: 0.75rem;
   display: flex;
   flex-shrink: 0;
   justify-content: center;
@@ -39,16 +39,16 @@
 
 .bs-icon.bs-icon-primary-light {
   color: var(--bs-primary);
-  background: rgba(var(--bs-primary-rgb), .2);
+  background: rgba(var(--bs-primary-rgb), 0.2);
 }
 
 .bs-icon.bs-icon-semi-white {
   color: var(--bs-primary);
-  background: rgba(255, 255, 255, .5);
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .bs-icon.bs-icon-rounded {
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 .bs-icon.bs-icon-circle {
@@ -61,7 +61,7 @@
 
 .top-bar {
   background: var(--bs-white);
-  border-bottom: 1px solid var(--bs-gray-300) ;
+  border-bottom: 1px solid var(--bs-gray-300);
   padding: 17px 7px;
 }
 
@@ -88,4 +88,3 @@ h1.error-page-code {
   color: var(--bs-blue);
   font-family: 'Bakbak One', serif;
 }
-
