--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,36 +1,36 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito%20Sans&&display=swap");
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Nunito%20Sans&&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer utilities {
   .content-wrapper {
-      @apply min-h-[93vh] bg-white dark:wrapper-background-color-dark shadow-sm rounded-lg mt-10 border border-gray-200 dark:border-gray-700 min-w-full md:w-4/5 md:min-w-0
+    @apply min-h-[93vh] bg-white dark:wrapper-background-color-dark shadow-sm rounded-lg mt-10 border border-gray-200 dark:border-gray-700 min-w-full md:w-4/5 md:min-w-0;
   }
   .button {
-      @apply border border-gray-200 dark:border-gray-700 px-4 py-1 text-sm cursor-pointer
+    @apply border border-gray-200 dark:border-gray-700 px-4 py-1 text-sm cursor-pointer;
   }
   .tab-active {
-      @apply border-b-2 border-yellow-500 text-yellow-500
+    @apply border-b-2 border-yellow-500 text-yellow-500;
   }
   .border-color {
-      @apply border-gray-200 dark:border-gray-700
+    @apply border-gray-200 dark:border-gray-700;
   }
   .grid-component-details {
-      grid-template-rows: 1fr minmax(100px, 3fr);
+    grid-template-rows: 1fr minmax(100px, 3fr);
   }
   .wrapper-background-color-dark {
-      @apply bg-gray-900
-      /* @apply bg-fgblue1 */
+    @apply bg-gray-900
+      /* @apply bg-fgblue1 */;
   }
   .item-background-color-dark {
-      @apply bg-gray-900
-      /* @apply bg-fgblue2 */
+    @apply bg-gray-900
+      /* @apply bg-fgblue2 */;
   }
 
   .skeleton {
-      @apply animate-pulse bg-gray-200 dark:bg-gray-700
+    @apply animate-pulse bg-gray-200 dark:bg-gray-700;
   }
 }
 
@@ -38,68 +38,68 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
- 
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
- 
+
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
- 
+
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
- 
+
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
- 
+
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
- 
+
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --ring: 222.2 84% 4.9%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
- 
+
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
- 
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
- 
+
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
- 
+
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
- 
+
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
- 
+
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
- 
+
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --ring: 212.7 26.8% 83.9%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
